# misc

bazel-python-example/: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  bin.py
odyssey/: README.md  odyssey.conf
pgbouncer/: Containerfile  README.md  build.sh  pg_hba.conf  pgbouncer.ini
postgres/odyssey/: README.md  odyssey-dev-ldap.conf
postgres/pgadmin4/: Containerfile  README.md
postgres/pgbackrest/: Containerfile  README.md
postgres/pgbouncer/: README.md  build.sh  pg_hba.conf  pgbouncer.ini  userlist.txt
postgres/pgcat/: .gitignore  BUILD  MODULE.bazel
rust_ldap/: Cargo.toml  shell.nix
rust_ldap/src/: main.rs
